<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/camera_info_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/info_camera"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/info_video_stream_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_video_stream_id"/>

        <TextView
            android:id="@+id/info_capture_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_capture_state"/>
        <TextView
            android:id="@+id/info_capture_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_capture_mode"/>
        <TextView
            android:id="@+id/info_video_recording_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_video_recording"/>
        <TextView
            android:id="@+id/info_free_space"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_free_space"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/uart_info_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/info_uart"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/info_uart1_baud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_uart1_baudrate"/>

        <TextView
            android:id="@+id/info_uart2_baud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_uart2_baudrate"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/d2d_info_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/info_d2d"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/d2d_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_d2d_connection"/>

        <TextView
            android:id="@+id/d2d_signal_air"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_d2d_signal_air"/>

        <TextView
            android:id="@+id/d2d_signal_controller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_d2d_signal_controller"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_d2d_pair" />

        <TextView
            android:id="@+id/pair_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/toggle_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_toggle_mode" />

        <TextView
            android:id="@+id/toggle_mode_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_photo" />

        <TextView
            android:id="@+id/photo_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_start_video_record" />

        <TextView
            android:id="@+id/start_video_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/stop_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_stop_video_record" />

        <TextView
            android:id="@+id/stop_video_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/switch_stream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_set_video_stream_id" />

        <TextView
            android:id="@+id/stream_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/set_uart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_set_uart_baudrate" />

        <EditText
            android:id="@+id/input_uart_id"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:hint="@string/hint_input_uart_id"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/input_uart_baud"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:hint="@string/hint_input_uart_baudrate"
            android:inputType="numberDecimal"/>

        <TextView
            android:id="@+id/set_uart_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
</ScrollView>